--- a/src/main/resources/templates/client/topic-courses.html
+++ b/src/main/resources/templates/client/topic-courses.html
@@ -93,7 +93,7 @@
         .badge-soft-finished {
             color: #f56e6e !important;
             background-color: rgba(245, 110, 110, .1);
-         }
+        }
     </style>
 </head>
 <body>
@@ -132,43 +132,43 @@
 </nav>
 
 <div class="container pt-4">
+
     <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-center">
-            <h1 th:text="'Сourses of ' + ${initials}"></h1>
+            <h1 th:text="${topicName} + ' courses'"></h1>
         </div>
     </div>
-    <div class="dropdown show mb">
-        <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">
-            Sort By...
-        </a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" th:href="@{'/main-page/teacher/courses?teacherId=' + ${teacherId} + '&sort=name(a-z)'}">Name (a-z)</a>
-            <a class="dropdown-item" th:href="@{'/main-page/teacher/courses?teacherId=' + ${teacherId} + '&sort=name(z-a)'}">Name (z-a)</a>
-            <a class="dropdown-item" th:href="@{'/main-page/teacher/courses?teacherId=' + ${teacherId} + '&sort=duration'}">Duration</a>
-            <a class="dropdown-item" th:href="@{'/main-page/teacher/courses?teacherId=' + ${teacherId} + '&sort=number-of-students'}">Number of Students</a>
-        </div>
-    </div>
+
     <div class="row">
         <div th:each="course : ${courses}" class="col-lg-4 col-md-6 col-12 pt-2">
             <div class="card border-0 bg-light rounded shadow">
                 <div class="card-body p-4">
-                    <span class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0" th:text="${course.topic.topicName}"></span>
+                    <span class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0"
+                          th:text="${course.topic.topicName}"></span>
                     <div class="flex-1">
                         <h5 class="font-size-16 mb-1"><a class="text-dark"
                                                          th:text="${course.courseName}"></a>
                         </h5>
-                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('not_begun')}" class="badge badge-soft-not-begun">Not Begun</span>
-                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('ongoing')}" class="badge badge-soft-ongoing">Ongoing</span>
-                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('finished')}" class="badge badge-soft-finished">Finished</span>
+                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('not_begun')}"
+                              class="badge badge-soft-not-begun">Not Begun</span>
+                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('ongoing')}"
+                              class="badge badge-soft-ongoing">Ongoing</span>
+                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('finished')}"
+                              class="badge badge-soft-finished">Finished</span>
                     </div>
                     <div class="mt-2">
-                        <span class="text-muted d-block mb-1"><i class="fa fa-hourglass-start" aria-hidden="true" th:text="' Start on ' + ${course.dateStart}"></i></span>
-                        <span class="text-muted d-block mb-1"><i class="fa fa-hourglass-end" aria-hidden="true" th:text="' Finish on ' + ${course.dateEnd}"></i></span>
-                        <span class="text-muted d-block"><i class="fa fa-user-circle-o" aria-hidden="true" th:text="' ' + ${course.numberOfStudents + ' students on course'}"></i></span>
+                        <span class="text-muted d-block mb-1"><i class="fa fa-hourglass-start" aria-hidden="true"
+                                                                 th:text="' Start on ' + ${course.dateStart}"></i></span>
+                        <span class="text-muted d-block mb-1"><i class="fa fa-hourglass-end" aria-hidden="true"
+                                                                 th:text="' Finish on ' + ${course.dateEnd}"></i></span>
+                        <span class="text-muted d-block"><i class="fa fa-user-circle-o" aria-hidden="true"
+                                                            th:text="' ' + ${course.numberOfStudents + ' students on course'}"></i></span>
                     </div>
                     <div class="d-flex justify-content-center mt-3">
-                        <a href="#" class="btn btn-primary">View Details</a>
+                        <form th:action="@{/main-page/course}" method="GET">
+                            <input type="hidden" name="courseId" th:value="${course.idCourse}">
+                            <button type="submit" class="btn btn-primary">View Details</button>
+                        </form>
                     </div>
                 </div>
             </div>
