--- a/src/main/resources/templates/client/teachers.html
+++ b/src/main/resources/templates/client/teachers.html
@@ -95,6 +95,7 @@
             vertical-align: baseline;
             border-radius: 5px;
         }
+
         .btn-primary {
             background-color: #556f96 !important;
             border: 1px solid #556f96 !important;
@@ -149,7 +150,21 @@
     </div>
 </nav>
 
-<div class="container mt-5">
+<div class="container pt-4">
+
+    <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-center">
+            <h1>Teachers</h1>
+        </div>
+    </div>
+
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/main-page">Main Page</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Teachers</li>
+        </ol>
+    </nav>
+
     <div class="row">
         <div th:each="teacher : ${teachers}" class="col-xl-3 col-sm-6">
             <div class="card">
@@ -185,28 +200,6 @@
                             </button>
                         </form>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="row g-0 align-items-center pb-4">
-            <div class="col-sm-6">
-                <div><p class="mb-sm-0">Showing 1 to 10 of 57 entries</p></div>
-            </div>
-            <div class="col-sm-6">
-                <div class="float-sm-end">
-                    <ul class="pagination mb-sm-0">
-                        <li class="page-item disabled">
-                            <a href="#" class="page-link"><i class="mdi mdi-chevron-left"></i></a>
-                        </li>
-                        <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                        <li class="page-item"><a href="#" class="page-link">2</a></li>
-                        <li class="page-item"><a href="#" class="page-link">3</a></li>
-                        <li class="page-item"><a href="#" class="page-link">4</a></li>
-                        <li class="page-item"><a href="#" class="page-link">5</a></li>
-                        <li class="page-item">
-                            <a href="#" class="page-link"><i class="mdi mdi-chevron-right"></i></a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
