--- a/src/main/resources/templates/client/edit-profile.html
+++ b/src/main/resources/templates/client/edit-profile.html
@@ -34,7 +34,7 @@
             background-color: #fff;
             background-clip: border-box;
             border: 0 solid rgba(0, 0, 0, .125);
-            border-radius: .25rem;
+            border-radius: 10px;
         }
 
         .card-body {
@@ -69,6 +69,34 @@
             box-shadow: none !important;
         }
 
+
+        .teacher-link {
+            color: black;
+            text-decoration: none;
+        }
+
+        .teacher-link:hover {
+            color: black;
+            text-decoration: underline;
+        }
+
+        .btn-primary {
+            background-color: #556f96 !important;
+            border: 1px solid #556f96 !important;
+            color: #fff !important;
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(54, 73, 98) !important;
+        }
+
+        .bg-custom {
+            background-color: #556f96 !important;
+        }
+
+        .text-custom {
+            color: #556f96 !important;
+        }
     </style>
 </head>
 <body>
@@ -260,16 +288,16 @@
                             <div class="card-body">
                                 <div>
                                     <span th:if="${role == 'Teacher'}">
-                                        <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2" th:text="'Journals '"></i></h6>
+                                        <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-custom mr-2" th:text="'Journals '"></i></h6>
                                     </span>
                                     <span th:if="${role == 'Student'}">
-                                        <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2" th:text="'Courses '"></i></h6>
+                                        <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-custom mr-2" th:text="'Courses '"></i></h6>
                                     </span>
                                 </div>
                                 <div th:each="course : ${chunk}">
                                     <small th:text="${course.courseName}"></small>
                                     <div class="progress mb-3" style="height: 5px">
-                                        <div class="progress-bar bg-primary" role="progressbar"
+                                        <div class="progress-bar bg-custom" role="progressbar"
                                              th:style="'width:' + ${course.progress} + '%'"
                                              th:aria-valuenow="${course.progress}" aria-valuemin="0"
                                              aria-valuemax="100"></div>
