--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,8 +7,19 @@
           rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
           crossorigin="anonymous">
-    <!--    <link rel="shortcut icon" type="icon/ico" th:href="@{/assets/favicon.ico}"/>-->
+    <style type="text/css">
+        .btn-primary {
+            background-color: #556f96 !important;
+            border: 1px solid #556f96 !important;
+            color: #fff !important;
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(54, 73, 98) !important;
+        }
+    </style>
 </head>
+
 <body style="background-color: #e2e8f0">
 <!--<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">-->
 <!--    <div class="container-fluid ms-3 me-3">-->
