Formatting html pages

--- a/src/main/resources/templates/administration/courses/courses-info.html
+++ b/src/main/resources/templates/administration/courses/courses-info.html
@@ -8,6 +8,17 @@
           rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
           crossorigin="anonymous">
+    <style type="text/css">
+        .btn-primary {
+            background-color: #556f96 !important;
+            border: 1px solid #556f96 !important;
+            color: #fff !important;
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(54, 73, 98) !important;
+        }
+    </style>
 </head>
 <body style="background: #e2e8f0">
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
