--- a/src/main/resources/templates/client/journal.html
+++ b/src/main/resources/templates/client/journal.html
@@ -37,13 +37,14 @@
         }
 
         .btn-primary {
-            background-color: #3490dc;
-            border-color: #3490dc;
+            background-color: #556f96 !important;
+            border: 1px solid #556f96 !important;
+            color: #fff !important;
+            box-shadow: 0 3px 7px rgb(85, 111, 150);
         }
 
         .btn-primary:hover {
-            background-color: #2779bd;
-            border-color: #2779bd;
+            background-color: rgb(54, 73, 98) !important;
         }
 
         .edit-input {
