--- a/src/main/resources/templates/client/topic-courses.html
+++ b/src/main/resources/templates/client/topic-courses.html
@@ -155,6 +155,8 @@
                               class="badge badge-soft-ongoing">Ongoing</span>
                         <span th:if="${course.courseStatus.name().equalsIgnoreCase('finished')}"
                               class="badge badge-soft-finished">Finished</span>
+                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('expired')}"
+                              class="badge badge-soft-finished">Finished</span>
                     </div>
                     <div class="mt-2">
                         <span class="text-muted d-block mb-1"><i class="fa fa-hourglass-start" aria-hidden="true"
