--- a/src/main/resources/templates/administration/courses/add-course.html
+++ b/src/main/resources/templates/administration/courses/add-course.html
@@ -1,52 +1,69 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Elective</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-        crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Elective</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+          crossorigin="anonymous">
+    <style type="text/css">
+        .btn-primary {
+            background-color: #556f96 !important;
+            border: 1px solid #556f96 !important;
+            color: #fff !important;
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(54, 73, 98) !important;
+        }
+    </style>
 </head>
 <body style="background: #e2e8f0">
 <br>
 <div class="container">
-  <div class="row">
-    <div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-      <h1 class="text-center">Add New Course</h1>
-      <div class="card-body">
-        <form th:action="@{/admin/courses/addCourse}" th:object = "${course}" method="POST">
-          <div class="form-group" >
-            <label>Course Name</label>
-            <input type = "text" name = "courseName" th:field="*{courseName}" class="form-control" placeholder="Enter the course name">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+            <h1 class="text-center mt-2">Add New Course</h1>
+            <div class="card-body">
+                <form th:action="@{/admin/courses/addCourse}" th:object="${course}" method="POST">
+                    <div class="form-group">
+                        <label>Course Name</label>
+                        <input type="text" name="courseName" th:field="*{courseName}" class="form-control"
+                               placeholder="Enter the course name">
 
-            <label>Course Date Start</label>
-            <input type = "date" name = "dateStart" th:field="*{dateStart}" class="form-control" placeholder="Enter the course start date">
+                        <label>Course Date Start</label>
+                        <input type="date" name="dateStart" th:field="*{dateStart}" class="form-control"
+                               placeholder="Enter the course start date">
 
-            <label>Course Date End</label>
-            <input type = "date" name = "dateEnd" th:field="*{dateEnd}" class="form-control" placeholder="Enter the course end date">
+                        <label>Course Date End</label>
+                        <input type="date" name="dateEnd" th:field="*{dateEnd}" class="form-control"
+                               placeholder="Enter the course end date">
 
-            <label>Teacher</label>
-            <select class="form-control" name = "idTeacher" th:field="*{teacher}">
-              <option th:each="teacher:${teachers}" th:value="${teacher.id}" th:text="${teacher.firstName}" value=""/>
-            </select>
+                        <label>Teacher</label>
+                        <select class="form-control" name="idTeacher" th:field="*{teacher}">
+                            <option th:each="teacher:${teachers}" th:value="${teacher.id}"
+                                    th:text="${teacher.firstName}" value=""/>
+                        </select>
 
-            <label>Topic</label>
-            <select class="form-control" name = "idTopic" th:field="*{topic}">
-              <option th:each="topic:${topics}" th:value="${topic.idTopic}" th:text="${topic.topicName}" value=""/>
-            </select>
+                        <label>Topic</label>
+                        <select class="form-control" name="idTopic" th:field="*{topic}">
+                            <option th:each="topic:${topics}" th:value="${topic.idTopic}" th:text="${topic.topicName}"
+                                    value=""/>
+                        </select>
 
-            <label>Course Description</label>
-            <textarea class="form-control mb-2" rows="3" name="description" th:field="*{description}" placeholder="Description"></textarea>
-          </div>
+                        <label>Course Description</label>
+                        <textarea class="form-control mb-2" rows="3" name="description" th:field="*{description}"
+                                  placeholder="Description"></textarea>
+                    </div>
 
-          <div class="footer-body">
-            <button type="submit" class = "btn btn-primary">Submit</button>
-          </div>
-        </form>
-      </div>
+                    <div class="footer-body">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
