--- a/src/main/resources/templates/administration/topics/add-topic.html
+++ b/src/main/resources/templates/administration/topics/add-topic.html
@@ -8,6 +8,17 @@
           rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
           crossorigin="anonymous">
+    <style type="text/css">
+        .btn-primary {
+            background-color: #556f96 !important;
+            border: 1px solid #556f96 !important;
+            color: #fff !important;
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(54, 73, 98) !important;
+        }
+    </style>
 </head>
 <body style="background: #e2e8f0">
 
@@ -35,7 +46,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center">Add New Topic</h1>
+            <h1 class="text-center mt-2">Add New Topic</h1>
             <div class="card-body">
                 <form th:action="@{/admin/topics/add-topic}" th:object="${topic}" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
